--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="navbar-fixed">
         <nav>
             <div class="nav-wrapper">
-                <a href="#!" class="brand-logo left"><i  data-activates="slide-out" class="material-icons">menu</i>PIPELINE</a>
+                <a href="#!" class="brand-logo left"><i  data-activates="slide-out" class="material-icons">menu</i>Baby Growth</a>
             </div>
         </nav>
     </div>
